changes in responsive

--- a/index.html
+++ b/index.html
@@ -221,13 +221,10 @@
       </div>
     </section>
 
-    <!-- call section -->
+    <!-- contact section -->
 
     <section id="call-to-action">
-      <h2>
-        Enroll for our various online courses <br />
-        anywhere from the world
-      </h2>
+      <h2>Enroll for our various online courses anywhere from the world</h2>
       <a href="" class="footer-btn">contact us</a>
     </section>
 
@@ -235,12 +232,14 @@
 
     <section id="footer">
       <h4>About us</h4>
-      <p>
-        Our journey began with a simple yet profound vision: to create a
-        platform that fosters learning, innovation, and community. We are
-        dedicated <br />to providing a space where individuals from diverse
-        backgrounds can explore, learn, and grow together.
-      </p>
+      <div class="footer-p">
+        <p>
+          Our journey began with a simple yet profound vision: to create a
+          platform that fosters learning, innovation, and community. We are
+          dedicated to providing a space where individuals from diverse
+          backgrounds can explore, learn, and grow together.
+        </p>
+      </div>
       <div class="icons">
         <i class="fa fa-facebook"></i>
         <i class="fa fa-twitter"></i>
