changes in responsive

--- a/about.html
+++ b/about.html
@@ -22,6 +22,7 @@
           <a href="index.html"><img src="images/logo4.png" /></a>
         </h1>
         <div class="right">
+          <button><i class="fa fa-bars"></i></button>
           <ul>
             <li><a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
@@ -68,12 +69,14 @@
 
     <section id="footer">
       <h4>About us</h4>
-      <p>
-        Our journey began with a simple yet profound vision: to create a
-        platform that fosters learning, innovation, and community. We are
-        dedicated <br />to providing a space where individuals from diverse
-        backgrounds can explore, learn, and grow together.
-      </p>
+      <div class="footer-p">
+        <p>
+          Our journey began with a simple yet profound vision: to create a
+          platform that fosters learning, innovation, and community. We are
+          dedicated <br />to providing a space where individuals from diverse
+          backgrounds can explore, learn, and grow together.
+        </p>
+      </div>
       <div class="icons">
         <i class="fa fa-facebook"></i>
         <i class="fa fa-twitter"></i>
